			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.05j: *********************************

BUG: (3/29/07, SMR) Text Properties dialog has inconsistent focus rules (Bug #945).
FIX: In GetInfoText, do not request focus for text area until dialog gets focus.

BUG: (3/29/07, DN) Reading ELIB libraries is slow in NFS because "TextUtils.getFileNameWithoutExtension(URL fileURL);"
    is called on each external NodeInst, and this methods requests NFS to resolve absolute path (200 msec from
    St.Petersburg).
FIX: Use new method "TextUtils.getFileNameWithoutExtension(Strign filePath);"

IMP: (3/28/07, GVG) Adding Poly-Active spacing rule to ST/TSMC 90nm DRC decks (bug#1287)

IMP: (3/26/07, DN) ELIB/ReadableDump writers don't modify scale settings of irrelevant technologies.

BUG: (3/23/07, DN) When libraries are specified in a command-line, project settings may be read from
    directory other than libraries.
FIX: In FileMenu use "TextUtils.getFilePath(fileURL)" instead of "User.getWorkingDirectory()".

BUG: (3/23/07, DN) Reading Spice, SiliconCompiler, PLA, PAD libraries changes all project settings.
FIX: In LibraryReader.readLibrary don't change project settings.

IMP: (3/23/07, DN) Project settings are reset before each AbstractTest and restored after it.

IMP: (3/22/07, DN) ProjSettings.exportSettings writes all Settings (even with default values).

IMP/MAN: (3/21/07, SMR) Default state of "icon technology" is now schematic,
     not universal (Bug #1295).

IMP: (3/21/07, SMR) Improved sea-of-gates router.

IMP: (3/21/07, SMR) Restored CRC checksum reporting to CIF export.

IMP: (3/21/07, SMR, from Bob Reese) Improved DEF import.

IMP/MAN: (3/17/07, DN) "importPrefs" command doesn't change project settings.

BUG: (3/17/07, DN) GDS layers settings are not initialized to factory values.
FIX: In Technology.newFoundry() method pass "gdsLayers" to Foundry constructor.
